tests/sumo/extended/simulation_routing/assignment/errors/trip_taz_noedge_disconnected_parallel/vehroutes.sumo.meso
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Thu Mar  3 16:29:20 2016 by SUMO Version dev-SVN-r20143
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_districts.taz.xml,input_trips.trips.xml"/>
    </input>

    <output>
        <vehroute-output value="vehroutes.xml"/>
    </output>

    <time>
        <begin value="0"/>
    </time>

    <processing>
        <ignore-route-errors value="true"/>
    </processing>

    <routing>
        <device.rerouting.probability value="1"/>
        <device.rerouting.adaptation-weight value="0.4"/>
        <device.rerouting.with-taz value="true"/>
        <device.rerouting.threads value="1"/>
    </routing>

    <report>
        <xml-validation value="never"/>
        <duration-log.disable value="true"/>
        <no-step-log value="true"/>
    </report>

    <mesoscopic>
        <mesosim value="true"/>
    </mesoscopic>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
</routes>
